[package]
name = "fizzle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1.4"
clap = { version = "4.3", features = ["derive", "env"] }
influxdb = { version = "0.1", path = "../influxdb" }
regex = "1.9"
rumqttc = { version = "0.22", features = ["url"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tasmota = { version = "0.1", path = "../tasmota" }
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1.29", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2.4", features = ["serde"] }
